--- a/src/assets/styles/input.module.scss
+++ b/src/assets/styles/input.module.scss
@@ -5,5 +5,26 @@
   > textarea {
     font-size: 16px;
     box-shadow: 0 0 0;
+
+    &::-webkit-scrollbar {
+      width: 12px;
+      height: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: rgba(0, 0, 0, 0);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 6px;
+      border: 3px solid transparent;
+      background-clip: content-box;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.3);
+      }
+    }
   }
 }
