--- a/src/assets/styles/upload.module.scss
+++ b/src/assets/styles/upload.module.scss
@@ -14,7 +14,6 @@
 }
 
 .upload-popover {
-
   ul {
     background-color: white;
     border-radius: 8px;
@@ -25,14 +24,12 @@
 
     > li {
       height: 36px;
-      display: flex;
-      align-items: center;
       background-color: #ffffff;
       border-radius: 8px;
       font-size: 14px;
       cursor: pointer;
       transition: color .3s ease, background-color .3s ease;
-      @include levelLiHover();
+      @include li(#f3f2ff, #615ced);
 
       > span {
         margin: 0 9px 0 12px;
