--- a/src/assets/styles/panel.module.scss
+++ b/src/assets/styles/panel.module.scss
@@ -1,3 +1,7 @@
-.ant-modal-root {
-  display: none;
+.panel {
+  :deep(.ant-modal-content) {
+    > .ant-modal-body {
+      height: 430px;
+    }
+  }
 }
