--- a/src/assets/styles/list.module.scss
+++ b/src/assets/styles/list.module.scss
@@ -29,6 +29,7 @@
     > li {
       color: #878aab;
       font-size: 12px;
+      margin-top: 12px;
 
       > ul {
         margin-top: 12px;
@@ -88,6 +89,10 @@
       border-radius: 5px;
       justify-content: flex-start;
       @include li(#f3f2ff, #615ced);
+
+      > input {
+        height: 25px;
+      }
 
       > span {
         margin-right: 5px;
